# blog-writing-agent

./: .gitignore  PROJECT_FULL_DETAILS.txt  README.md  duckdns_update.ps1
backend/: README.md  config.py  hil.md  main.py  prompt.txt  prompts_used.txt  pyproject.toml  run_output.txt
backend/agent/: commands_used.txt  config.py  final_blog_post.md  final_blog_post_Write_a_blog_post_about_the_benefits_of_using_MCP_.md  final_blog_post_local_llms_for_privacy_create_.md  final_blog_post_pros_and_cons_of_artificial_an.md  final_blog_post_write_a_blog_on_why_earth_crea.md  final_blog_post_write_a_blog_post_about_the_be.md  init_db.py  main.ipynb  main.py  output.txt  output.txt.bak  run-019d679b-7cb2-7be2-8e53-4e8a1706e08c.json  state.py  test_db.py  tools.py  workflow.py
backend/agent/model/: __init__.py  ollama.py
backend/agent/nodes/: __init__.py  assembler.py  critic.py  editor.py  finalize.py  image_generation.py  image_planner.py  planner.py  research_loop.py  research_query_gen.py  researcher.py  researcher_node_code_chatgpt.py  router.py  summarizer.py  task_executer.py  test_image.py
backend/api/: api_descriptions.json  config.py  main.py
backend/api/routes/: blog.py
backend/api/routes/auth/: login.py  logout.py  main.py  register.py  update_password.py
backend/api/routes/blog/: delete_chat.py  final_post.py  generate.py  main.py  review.py  status.py  stream.py  user_posts.py
backend/api/schema/: app_resources.py  auth_states.py  blog_request.py  blog_states.py  final_post_request.py  review_request.py  stream_manager.py
backend/api/schema/blog/: states.py
backend/api/utils/: access_token.py  auth.py  errors.py  password_hashing.py
backend/db/crud/: blog_outputs.py  blog_runs.py  user_data.py
backend/docs/: blogs_title.txt  fastapi_tasks.md  hil_code.md  node_check_streaming_output.txt  prompts_used.txt  run_output.txt  task_executer_output.md  workflow.md
frontend/: README.md  package.json  pnpm-lock.yaml  tailwind.config.ts
mcp_server/: .dockerignore  Dockerfile  README.md  config.py  integration_result.json  main.py  pyproject.toml  server.py
mcp_server/tests/: test_tools.py
mcp_server/tools/: fetch_page.py  keyword_extractor.py  summarizer.py  web_search.py
(+80 files in other folders)
