[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastmcp>=3.1.1",
    "httpx>=0.28.1",
    "mcp[cli]>=1.26.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.23",
    "tiktoken>=0.12.0",
]
